package com.novaperutech.veyra.platform.tracking.domain.model.commands;

public record SeedMeasurementCommand() {

}
