package com.novaperutech.veyra.platform.tracking.domain.model.queries;

public record GetAllMeasurementQuery() {
}
