package com.novaperutech.veyra.platform.tracking.interfaces.rest.resources;

public record MeasurementResource(String  id ,String deviceId) {
}
